+ api for trainer
